fixed tooltip issue on mobile

--- a/_sass/_tooltips.scss
+++ b/_sass/_tooltips.scss
@@ -8,7 +8,7 @@
   display: inline-block;
 }
 
-/* Tooltip text */
+// /* Tooltip text */
 .tooltip .tooltiptext {
   visibility: hidden;
   background-color: #F2F2F2;
@@ -24,6 +24,10 @@
   left: 50%;
   margin-left: -15px; /* Use half of the width (120/2 = 60), to center the tooltip */
   position: absolute;
+  @media only screen and (max-width: 1000px) {
+    white-space: normal !important;
+    width: auto !important;
+  }
 }
 .tooltip:hover .tooltiptext {
   visibility: visible;
@@ -57,6 +61,10 @@ kbd {
   opacity: 0;
   transition: opacity 1s;
   font-size: 14px;
+  @media only screen and (max-width: 1000px) {
+    white-space: normal !important;
+    width: auto !important;
+  }
 }
 
 .tooltip-checkbox:hover {
@@ -68,6 +76,44 @@ kbd {
 }
 
 .tooltip-checkbox input:checked+span {
+  visibility: visible;
+  opacity: 1;
+}
+
+.tooltip-understand {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+}
+
+.tooltip-understand span {
+  visibility: hidden;
+  width: 100%;
+  background-color: $white;
+  border: 1px solid $wcuRidgeGreen;
+  color: black;
+  text-align: left;
+  border-radius: 6px;
+  padding-left: 8px;
+  padding-right: 8px;
+  position: absolute;
+  bottom: 1em;
+  left: -2px;
+  opacity: 0;
+  transition: opacity 1s;
+  font-size: 14px;
+}
+
+.tooltip-understand:hover {
+  cursor: pointer;
+  color: $gold;
+}
+
+.tooltip-understand input {
+  display:none;
+}
+
+.tooltip-understand input:checked+span {
   visibility: visible;
   opacity: 1;
 }
